--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,7 +34,8 @@ body {
   position: fixed;
   background: #fff;
   top: 0;
-  transition: all 1.5s;
+  transition: all 0.5s;
+  border-bottom: 1px solid #c2c2c281;
 }
 
 .header .headerlogo img {
@@ -48,7 +49,7 @@ body {
   color: #fff;
 }
 .scroll {
-  transition: all 1.5s;
+  transition: all 0.5s;
 }
 .scroll.header a.link {
   color: #333;
@@ -62,7 +63,7 @@ body {
   width: 100%;
   height: 100%;
   position: absolute;
-  background: rgb(0 0 0);
+  background: linear-gradient(180deg, black, transparent);
   opacity: 0.9;
 }
 
