--- a/styles/bussiness.module.scss
+++ b/styles/bussiness.module.scss
@@ -161,7 +161,7 @@
 
             svg {
                 fill: #a0cd4e;
-
+                display: inline;
                 &:hover {
                     fill: #000;
                 }
@@ -530,6 +530,7 @@
 }
 .consult2 {
     text-align: center;
+    display: flex;
     img {
         width: 80px;
         height: 80px;
@@ -577,6 +578,9 @@
     img {
         cursor: all-scroll;
     }
+}
+.achive{
+    display: flex;
 }
 .allachive{
     a{
