--- a/styles/business.module.scss
+++ b/styles/business.module.scss
@@ -1,17 +1,11 @@
-.maincontainer {
-    width: 100%;
-    background-color: #ffffff;
-    // padding: 50px 30px;
-}
 .sectdiv {
     display: flex;
-    width: 100%;
     background-size: 100%;
     padding: 100px;
     background-image: url(/bussinessimage/bg1-3.jpg);
 
     .img1div {
-        width: 50%;
+        flex: 1;
         position: relative;
     }
 
@@ -19,37 +13,35 @@
         content: "";
         position: absolute;
         top: 37px;
-        left: -40px;
+        left: -15px;
         right: 0;
-        bottom: -30px;
+        bottom: -15px;
         box-shadow: -17px 16px 0px 0px rgb(163, 40, 57);
         width: 100%;
     }
 }
-.sectdiv1{
-    width: 50%;
+
+.sectdiv1 {
+    flex: 1;
 }
 
 .awesome2 {
     margin-top: 45px;
     margin-left: 45px;
-    border-left: 5px solid #3c3c7e;
+    border-left: 5px solid #ff6c6c;
     padding-left: 20px;
     line-height: 46px;
     transition: all 0.3s linear 0s;
     color: #fff;
 
     p {
-        color: #a0cd4e;
+        color: #ff6c6c;
     }
 
     h6 {
-
-
-
-        line-height: 46px;
-        font-size: 40px;
-        font-weight: 600;
+        line-height: 30px;
+        font-size: 30px;
+        font-weight: 500;
         transition: all 0.3s linear 0s;
         color: #fff;
     }
@@ -62,20 +54,24 @@
         list-style: none;
         gap: 30px;
         padding: 50px;
+
         li {
             p {
-                color:  #fffc;
+                color: #fffc;
                 font-size: 14px;
                 font-weight: 600;
                 padding: 0px;
             }
+
             display: flex;
             align-items: center;
             background-color: rgb(126 122 122);
+
             &:hover {
-                background-color: #a0cd4e;
-                transition: 1s;
-                p{
+                background-color: #ff6c6c;
+                transition: 0.5s;
+
+                p {
                     color: #fff;
                 }
 
@@ -86,8 +82,9 @@
             }
 
             svg {
-                fill: #a0cd4e;
+                fill: #ff6c6c;
                 padding: 10px;
+
                 &:hover {
                     fill: #fff;
                 }
@@ -95,16 +92,18 @@
 
         }
     }
+
     p {
-        color:  #fff;
+        color: #fff;
         font-size: 16px;
         font-weight: 500;
         padding-left: 50px;
     }
 }
+
 .workdiv {
     margin: 50px;
-    border-left: 5px solid #a0cd4e;
+    border-left: 5px solid #ff6c6c;
     padding-left: 20px;
 
     p {
@@ -112,24 +111,34 @@
     }
 
     h6 {
-        line-height: 46px;
-        font-size: 40px;
-        font-weight: 600;
+        line-height: 30px;
+        font-size: 30px;
+        font-weight: 500;
         transition: all 0.3s linear 0s;
     }
 }
+
 .specdiv {
     display: flex;
 }
+
 .imagediv {
-    float: left;
+    width: 50%;
+    padding: 25px;
+
+    img {
+        height: 100%;
+        max-width: 120%;
+    }
 }
+
 .financialdiv {
+    padding: 25px;
+
     ul {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         list-style: none;
-        padding: 50px;
 
         li {
             padding: 20px;
@@ -137,9 +146,10 @@
             box-sizing: content-box;
             box-shadow: 4px 4px 10px 2px #8080804a;
             transition: 0.8s;
-            &:hover{
+
+            &:hover {
                 box-sizing: content-box;
-                box-shadow: 13px 13px 20px 8px rgba(128, 128, 128, 0.2901960784);
+                box-shadow: 4px 4px 20px 5px #ff6c6c;
                 transition: 0.8s;
             }
 
@@ -158,273 +168,478 @@
     }
 }
 
-.ourservice {
-    margin: 50px;
-    border-left: 5px solid #a0cd4e;
-    padding-left: 20px;
 
-    p {
-        font-size: 16px;
-    }
+// section
 
-    h6 {
-        line-height: 46px;
-        font-size: 40px;
-        font-weight: 600;
-        transition: all 0.3s linear 0s;
-    }
+.mpcdiv{
+    background-color: #cbcbc636;
 }
-.blogsdiv {
+
+.picmain {
     display: flex;
-    margin: 50px;
-    padding-left: 20px;
-    gap: 30px;
-    justify-content: center;
+    padding: 40px;
+    width: 100%;
+    height: 500px;
 }
-.blogs1 {
-    position: relative;
-    text-align: center;
+
+.pic1main {
+    display: flex;
+    padding: 40px;
+    width: 100%;
+    height: 500px;
+}
+
+.photodiv {
+    flex: 1;
+    overflow: hidden;
     img {
         width: 100%;
-    }
-}
-.blogs2 {
-    padding: 20px;
-    line-height: 30px;
-    background-color: white;
-    fill: #fff;
-    width: 310px;
-    position: relative;
-    margin: -40px auto 0;
-    display: block;
-    z-index: 9999;
-    transition: 0.8s;
-    &:hover {
-        background-color: #a0cd4e;
-        transition: 0.5s;
-        h3 {
-            transition: 0.8s;
-            color: #fff;
+        height: 500px;
+        transition: 0.5s all ease-in-out;
+        &:hover {
+            transition: 0.5s all ease-in-out;
+            transform: scale(1.2);
         }
     }
 }
-.paradiv {
-    p {
-        padding: 72px;
-        padding-top: 0;
-        padding-bottom: 0;
-    }
-}
-.picmain{
-    display: flex;
-    margin: 80px;
-    gap: 15px;
-}
-.pic1main{
-    display: flex;
-    margin: 80px;
-    gap: 15px;
-}
-.photodiv{
-    flex: 1;
-}
-.cont11div{
-    flex: 1;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: left !important;
-    h2{
-        line-height: 30px;
-        font-size: 30px;
-        font-weight: 500;
-       margin-bottom: 10px;
-       width: 100%;
-    }
-    p{
-                color: #00000087;
-                margin-bottom: 10px;
-    }
-}
 
-
-.contactdiv{
-    float: left;
+.cont11div {
+    flex: 1.5;
     width: 100%;
-    button{
+    height: 300px;
+    background: #fff;
+    color: black;
+    margin: 0px auto;
+    margin: auto;
+    display: block;
+    max-width: 100%;
+    padding: 20px;
+    position: relative;
+    top: 75;
+    left: -75px;
+    opacity: 1;
+    h2 {
+        line-height: 30px;
+        font-size: 28px;
+        font-weight: 500;
+        margin-bottom: 15px;
+        width: 100%;
+        word-spacing: 1px;
+    }
+
+    p {
+        margin-bottom: 15px;
+        width: 100%;
+    }
+}
+
+.cont12div {
+    flex: 1.5;
+    width: 100%;
+    height: 300px;
+    background: #fff;
+    color: black;
+    margin: 0px auto;
+    margin: auto;
+    display: block;
+    max-width: 100%;
+    padding: 20px;
+    position: relative;
+    top: 75;
+    left: 74px;
+    opacity: 1;
+    z-index: 1;
+    h2 {
+        line-height: 30px;
+        font-size: 28px;
+        font-weight: 500;
+        margin-bottom: 10px;
+        width: 100%;
+        word-spacing: 1px;
+    }
+
+    p {
+        margin-bottom: 10px;
+        width: 100%;
+    }
+}
+
+
+.contactdiv {
+      button {
         font-weight: 500;
         padding: 15px 28px;
+        color: #fff;
         border: 1px solid #ff6c6c;
-        background-color: #ff6c6c;
+        background-color: #e26060;
         border-radius: 5px;
         transition: 0.6s;
-        &:hover{
+
+        &:hover {
             color: #fff;
             box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
         }
     }
 }
+.servdiv{
+    display: flex;
+    margin: 0px 50px;
+}
+.procdiv{
+    flex: 1;
+    h2{
+        line-height: 30px;
+        font-size: 28px;
+        font-weight: 500;
+        margin-bottom: 10px;
+        width: 100%;
+        word-spacing: 1px;
+    }
+    p{
+        color:  rgb(0 0 0 / 80%);
+    }
+    ul{
+        padding: 10px;
+        list-style-type: disc;
+        margin-left: 7px;
+        li{
+            margin: 5px 0px;
+            transition: 0.5s;
+            &:hover{
+                transform: scale(1.02);
+            }
+        }
+    }
+}
+.whyimg{
+    flex: 1;
+    overflow: hidden;
+    img{
+    width: 500px;
+    height: 472px;
+    transition: 0.5s; 
+    margin-left: 60px;
+    &:hover{
+         transform: scale(1.1);
+    }
+    }
+}
+
+.offer{
+    margin: 50px;
+    h3{
+        font-size: 26px;
+        font-weight: 500;
+        text-align: center;
+    }
+}
+.quadiv{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px;
+    margin: 50px;
+}
+.teamdiv{
+       img{
+        width: 55px;
+        margin: 15px;
+       }
+       display: flex;
+        padding: 20px;
+        margin: 20px;
+        box-sizing: content-box;
+        box-shadow: 4px 4px 10px 2px #8080804a;
+        transition: 0.5s;
+
+        &:hover {
+            box-sizing: content-box;
+            box-shadow: 4px 4px 20px 5px #ff6c6c;
+            transition: 0.5s;
+        }
+        h2{ 
+            font-size: 18px                                                                                                                             ;
+            font-weight: 500;
+            line-height: 1;
+            margin-bottom: 10px;
+        }
+
+        p {
+            line-height: 20px;
+            color: #00000087;
+        }
+
+}
 
 
-@media(max-width:720px){
-    .head1{
+@media(max-width:720px) {
+    .head1 {
         display: grid;
     }
-    .ontime{
+
+    .ontime {
         margin-top: 10px;
         margin-right: 10px;
     }
-    .contdiv{
+
+    .contdiv {
         display: grid;
     }
-    .cont1div{
+
+    .cont1div {
         display: grid;
-    ul{
-        display: grid;
-    grid-template-columns: none;
-    padding: 25px;
+
+        ul {
+            display: grid;
+            grid-template-columns: none;
+            padding: 25px;
+        }
     }
-    }
-    .cont2div{
+
+    .cont2div {
         display: none;
     }
-    .sectdiv{
+
+    .sectdiv {
         display: grid;
         padding: 0px;
     }
-    .img1div{
+
+    .img1div {
         display: none;
     }
-    .sectdiv1{
+
+    .sectdiv1 {
         width: 100%;
         margin: 0;
         padding: 0;
     }
-    .keepyour{
-       padding: 5px;
-       gap: 4px;
-        ul{
+
+    .keepyour {
+        padding: 5px;
+        gap: 4px;
+
+        ul {
             padding: 0px;
             gap: 4px;
-            li{
+
+            li {
                 margin: 0;
                 padding: 0;
-                p{
+
+                p {
                     font-size: 12px;
                 }
             }
         }
-       p{
-        padding: 0px;
-        margin-top: 10px;
-       }
-    }
-    .awesome2{
-        margin: 0;
-        padding-left: 10px;
-    border-left: 5px solid #3c3c7e;
-    color: #fff;
-    h6{
-     line-height: 24px;
-    font-size: 20px;
-    font-weight: 600;
-    color: #fff;
-    }
-    }
-    .alldevdiv{
-        ul{
-            display: grid;
-           justify-content: left;
-           grid-template-columns: repeat(2,1fr);
+
+        p {
+            padding: 0px;
+            margin-top: 10px;
         }
     }
-    .imagesdiv{
-        ul{
+
+    .awesome2 {
+        margin: 0;
+        padding-left: 10px;
+        border-left: 5px solid #3c3c7e;
+        color: #fff;
+
+        h6 {
+            line-height: 24px;
+            font-size: 20px;
+            font-weight: 600;
+            color: #fff;
+        }
+    }
+
+    .alldevdiv {
+        ul {
+            display: grid;
+            justify-content: left;
+            grid-template-columns: repeat(2, 1fr);
+        }
+    }
+    .cont11div{  
+        flex: none; 
+        width: 100%;
+        height: auto;
+        background: #fff;
+        color: black;
+        margin: 0px auto;
+        margin: auto;
+        display: block;
+      
+        padding: 0px 20px;
+        position: inherit;
+        h2{
+            font-size: 18px;
+            font-weight: 500;
+            margin: 0;
+            padding: 0;
+            margin-bottom: 5px;
+        }
+       }
+       .cont12div{  
+        flex: none; 
+        width: 100%;
+        height: auto;
+        background: #fff;
+        color: black;
+        margin: 0px auto;
+        margin: auto;
+        display: block;
+        padding: 0px 20px;
+        position: inherit;
+        h2{
+            font-size: 18px;
+            font-weight: 500;
+            margin: 0;
+            padding: 0;
+            margin-bottom: 5px;
+        }
+       }
+    .photodiv{
+        display: inherit;
+
+    }
+
+    .imagesdiv {
+        ul {
             display: grid;
             grid-template-columns: repeat(1, 1fr);
         }
     }
-    .imagediv{
+
+    .imagediv {
         display: none;
     }
-    .financialdiv{
-          ul{
+    .financialdiv {
+        ul {
             padding: 0px;
             display: grid;
-            grid-template-columns: repeat(1,1fr);
-          }
+            gap: 10px;
+            grid-template-columns: repeat(1, 1fr);
+            li{
+                padding: 20px;
+                margin: 0;
+            }
+        }
     }
-    .videobook{
+    .workdiv{
+        margin: 10px;
+        border-left: 5px solid #ff6c6c;
+        padding-left: 20px;
+    }
+
+    .videobook {
         display: grid;
     }
-    .video1{
+
+    .video1 {
         padding: 20px;
         width: 100%;
     }
-    .appointment{
+
+    .appointment {
         width: 100%;
         padding: 10px;
-        form{
-            input{
+
+        form {
+            input {
                 font-size: 15px;
             }
-            select{
+
+            select {
                 font-size: 15px;
             }
-            span{
+
+            span {
                 font-size: 15px;
                 line-height: 20px;
             }
         }
     }
-    .expert{
+
+    .expert {
         display: grid;
-    gap: 20px;
-    grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+        grid-template-columns: repeat(2, 1fr);
     }
-    .consultdiv{
+
+    .consultdiv {
         display: grid;
     }
-    .consult2{
+
+    .consult2 {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
     }
-    .blogsdiv{
+
+    .blogsdiv {
         display: grid;
         padding: 0px;
         margin: 0px;
     }
-    .logodiv{
-    margin: 0px;
-    padding: 0px;
-    padding-bottom: 20px;
-}
-    .achive{
+
+    .logodiv {
+        margin: 0px;
+        padding: 0px;
+        padding-bottom: 20px;
+    }
+
+    .achive {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         padding: 0px;
         margin: 0px;
     }
-    .allachive{
-        a{
-         font-size: 16px;
-         font-weight: 500;
-         padding-left: 25px;
-         padding-right: 25px;
+
+    .allachive {
+        a {
+            font-size: 16px;
+            font-weight: 500;
+            padding-left: 25px;
+            padding-right: 25px;
         }
     }
-    .picmain{
+
+    .picmain {
         display: grid;
         margin: 0;
         padding: 0;
         margin-bottom: 10px;
     }
-    .pic1main{
-   display: flex;
-    margin: 0;
-    padding: 0;
-    margin-bottom: 10px;
-    flex-direction: column-reverse;
+
+    .pic1main {
+        display: flex;
+        margin: 0;
+        padding: 0;
+        margin-bottom: 10px;
+        flex-direction: column-reverse;
+    }
+    .offer{
+        display: grid;
+        margin: 5px;
+        padding: 0;
+    }
+    .quadiv{
+        display: grid;
+        grid-template-columns: inherit;
+        margin: 5px;
+        padding: 0;
+    }
+    .servdiv{
+        display: grid;
+        padding: 0;
+        margin: 5px;
+    }
+    .whyimg{
+        margin: 0;
+        padding: 0;
+        img{
+            margin: 0;
+            padding: 0;
+            
+        }
     }
 }
