--- a/styles/carrier.module.scss
+++ b/styles/carrier.module.scss
@@ -12,7 +12,7 @@
         color: #000000cf;
     }
     p{
-        color: #0045cf;
+        color: #ff3606;
         border-bottom: 1px solid #0045cf7a;
         font-size: 12px;
         cursor: pointer;
@@ -22,7 +22,7 @@
     .buttdiv{
         text-align: center;
         button{
-            background-color: #0045cf;
+            background-color: #ff3606;
             color: #fff;
             border-radius: 3px;
             padding-bottom: 12px;
@@ -42,14 +42,14 @@
         grid-template-columns: repeat(3,1fr);
         li{
             box-sizing: content-box;
-            box-shadow: 0px 0px 0px 0px rgba(128, 128, 128);
+            box-shadow: 0px 0px 0px 0px #ff3606;
             cursor: pointer;
             margin: 10px;
             &:hover{
                 box-sizing: content-box;
                 box-shadow: 3px 3px 10px 3px rgba(128, 128, 128, 0.2);
                 a{
-                    color: #0045cf;
+                    color: #ff3606;
                 }
             }
         }
@@ -85,7 +85,7 @@
     border-bottom: 1px solid #0000001a;
     margin-top: 8px;
     svg{
-        fill: #0045cf;
+        fill: #ff3606;
         margin-bottom: 10px;
     }
     p{
@@ -100,7 +100,7 @@
     gap: 15px;
     margin-top: 8px;
     svg{
-        fill: #0045cf;
+        fill: #ff3606;
     }
     p{
         color: #484848;
@@ -127,8 +127,8 @@
         line-height: 1.5;
     a{
         cursor: pointer;
-        color: #0045cf;
-        border-bottom: 1px solid rgba(0,69,207,.3);
+        color: #ff3606;
+        border-bottom: 1px solid #ff3606;
         display: inline;
         line-height: 1.5;
         transition: border-color .3s;
@@ -157,7 +157,7 @@
         }
         li::before {
             content: "o";
-    color: blue;
+    color: #ff3606;
     font-weight: 600;
     display: inline-block;
     width: 1em;
@@ -177,8 +177,8 @@
         margin-top: 50px;
         a{
             cursor: pointer;
-            color: #0045cf;
-            border-bottom: 1px solid rgba(0,69,207,.3);
+            color: #ff3606;
+            border-bottom: 1px solid #ff3606;
             display: inline;
             line-height: 1.5;
             transition: border-color .3s;
@@ -221,8 +221,8 @@
         margin-bottom: 10px;
     }
     p{
-        border-bottom: 1px dashed rgba(0,69,207,.3);
-        color: #0045cf;
+        border-bottom: 1px dashed #ff3606;
+        color: #ff3606;
         cursor: pointer;
         display: inline-block;
         line-height: 1.5;
@@ -232,12 +232,12 @@
         position: relative;
         transition: border-color .3s;
         &:hover{
-            border-bottom-color: #0045cf;
+            border-bottom-color: #ff3606;
         }
     }
     p::after{
-        border-top: 1px solid #1d3763;
-        border-left: 1px solid #1d3763;
+        border-top: 1px solid #ff3606;
+        border-left: 1px solid #ff3606;
         content: '';
         height: 7px;
         position: absolute;
@@ -257,11 +257,11 @@
     gap: 5px; 
         a{
             border-bottom: 1px solid rgba(0, 69, 207, 0.3);
-            color: #0045cf;
+            color: #ff3606;
             cursor: pointer;
             font-size: 13px;
             &:hover{
-                border-bottom-color: #0045cf;
+                border-bottom-color: #ff3606;
             }
         }
 }
@@ -270,14 +270,14 @@
         font-size: 13px;
  a{
         border-bottom: 1px dashed rgba(0,69,207,.3);
-        color: #0045cf;
+        color: #ff3606;
         cursor: pointer;
         display: inline-block;
         font-size: 13px;
         position: relative;
         transition: border-color .3s;
         &:hover{
-            border-bottom-color: #0045cf;
+            border-bottom-color: #ff3606;
         }
     }
 }
@@ -292,7 +292,7 @@
     text-align: center;
     transition-property: background-color,color;
     transition-duration: .3s;
-    background-color: #0045cf;
+    background-color: #ff3606;
     color: #fff;
     margin-bottom: 18px;
     padding-left: 80px;
@@ -300,13 +300,13 @@
     margin-top: 20px;
     font-weight: 500;
     &:hover{
-        background-color: #0036a3;
+        background-color: #ff3606;
     }
 }
 .linkedin{
-    border: 2px solid #aab4c4;
+    border: 2px solid #ff3606;
     border-radius: 0;
-    color: #323232;
+    color: #ff3606;
     cursor: pointer;
     display: block;
     font-size: .875rem;
@@ -322,8 +322,8 @@
     padding-right: 22px;
     margin-bottom: 20px;
     &:hover{
-        background-color: #aab4c4;
-        color: #fff;
+        background-color: #ff3606;
+        color: #ff3606;
     }
 }
 .share{
@@ -341,7 +341,7 @@
     gap: 10px;
     margin-top: 15px;
     svg{
-        fill: rgb(59, 89, 152);
+        fill: #ff3606;
     }
 }
 
