--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -1,106 +1,172 @@
-.officediv{
+.agile {
     display: flex;
-  padding: 50px 100px; 
-  gap: 50px;
+    padding: 50px 100px;
+    gap: 20px;
+   
 }
-.picdiv{
-    width: 50%;
-    img{
+.discdiv {
+    flex: 1;
+    padding: 25px;
+    border: 1px solid #ffffffe3;
+    background-color: #ff6c6c;
+    h2 {      
+    font-size: 22px;
+    font-weight: 500;
+    color: #ffffffe3;
+    margin-bottom: 5px;
+    }
+    p{
+        color: #ffffffe3;
+    }
+}
+.discdiv1 {
+    flex: 1;
+    padding: 25px;
+    border: 1px solid #ffffffe3;
+    background: #2b0a3d;
+    h2 {      
+    font-size: 22px;
+    font-weight: 500;
+    color: #ffffffe3;
+    margin-bottom: 5px;
+    }
+    p{
+        color: #ffffffe3;
+    }
+}
+.discdiv2 {
+    flex: 1;
+    padding: 25px;
+    border: 1px solid #fff;
+    background-image: url(/Images/DotCom_Banner_2880X1800.jpg);
+    h2 {      
+    font-size: 22px;
+    font-weight: 500;
+    color: #ffffffe3;
+    margin-bottom: 5px;
+    }
+    p{
+        color: #ffffffe3;
+    }
+}
+.officediv {
+    display: flex;
+    padding: 25px 100px;
+    gap: 50px;
+}
+
+.picdiv {
+    flex: 1;
+
+    img {
         display: inherit;
         border-radius: 10px;
     }
 }
-.contmain{
-    width: 50%;
+
+.contmain {
+    flex: 1;
     padding: 50px;
+    padding: 0;
     padding-left: 0;
 }
-.providiv{
-    h6{
+
+.providiv {
+    h6 {
         font-weight: 400;
-    color: #151515;
-    margin-bottom: 10px;
-    
+        color: #151515;
+
     }
-    h2{
-        font-size: 2.25rem;
+
+    h2 {
+        font-size: 2rem;
         font-weight: 600;
-        line-height: 40px;
-        margin-bottom: 15px;
+
+
         color: #000000eb;
     }
-    h4{
+
+    h4 {
         color: #484848;
-    display: inline-block;
-    font-size: 24px;
-    font-weight: 300;
-    line-height: 1;
-    position: relative;
-    padding-right: 20px;
-    margin-bottom: 15px;  
-}
-h4::after{
-    background-color: #b4b4b4;
-    content: "";
-    position: absolute;
-    left: 100%;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
-    height: 2px;
-    width: 110px;
-}  
-p{
-    color: #151515;
-    font-size: .9375rem;
-    font-weight: 400;
-    line-height: 1.6;
-    word-spacing: 1px;
-    letter-spacing: 0.5px;
-}
-a{
-    color: #151515;
-    font-size: 16px;
-    font-weight: 500;
-    display: flex;
-    align-items: center;
-    margin-top: 15px;
-    gap: 5px;
-    cursor: pointer;
-    span{
-        font-size: 20px;
-        letter-spacing: -5px;
-        &:hover{
-            margin-left: 5px;
+        display: inline-block;
+        font-size: 24px;
+        font-weight: 300;
+        line-height: 1;
+        position: relative;
+        padding-right: 20px;
+        margin-bottom: 15px;
+    }
+
+    h4::after {
+        background-color: #b4b4b4;
+        content: "";
+        position: absolute;
+        left: 100%;
+        top: 50%;
+        -webkit-transform: translateY(-50%);
+        transform: translateY(-50%);
+        height: 2px;
+        width: 110px;
+    }
+
+    p {
+        color: #151515;
+        font-size: .9375rem;
+        font-weight: 400;
+        line-height: 1.6;
+        word-spacing: 1px;
+        letter-spacing: 0.5px;
+    }
+
+    a {
+        color: #151515;
+        font-size: 16px;
+        font-weight: 500;
+        display: flex;
+        align-items: center;
+        margin-top: 15px;
+        gap: 5px;
+        cursor: pointer;
+
+        span {
+            font-size: 20px;
+            letter-spacing: -5px;
+            transition: 0.5s;
+            &:hover {
+                transform: scale(1.4);
+            }
         }
-     }
+    }
 }
-}
 
 
 
-.bestdiv{
+.bestdiv {
     display: flex;
     padding: 0 100px;
     margin-bottom: 50px;
 }
-.creativ{
-    h2{
+
+.creativ {
+    h2 {
         font-weight: 500;
-    line-height: 1;
-    margin-bottom: 10px;
+        line-height: 1;
+        margin-bottom: 10px;
     }
-    p{
+
+    p {
         color: #151515;
         font-size: .9375rem;
-       
+
     }
 }
-.teamdiv{
+
+.teamdiv {
     display: flex;
     align-items: center;
     margin-right: 50px;
-    img{
+
+    img {
         text-align: center;
         margin-right: 20px;
         -webkit-flex-basis: 50px;
@@ -108,167 +174,298 @@ a{
         width: 50px;
     }
 }
-.bgdiv{
+
+.bgdiv {
     background-image: url(/Images/team-bg.2a1a1143.jpg);
-    // width: 100%;
+    width: 100%;
     height: auto;
 }
-.great{
+
+.great {
     display: flex;
     color: #fff;
     padding: 80px;
 }
-.contediv{
-    width: 50%;
+
+.contediv {
+   flex: 1;
     color: #bbb;
     position: relative;
-   padding-top: 50px;
-    h3{
+    padding-top: 50px;
+
+    h3 {
         color: #fff;
         margin-bottom: 13px;
         font-weight: 400;
         text-transform: uppercase;
         font-size: 1rem;
     }
-    h1{
+
+    h1 {
         color: #fff;
         font-size: 2.25rem;
-    font-weight: 600;
-    margin-top: -5px;
-    margin-bottom: 18px;
-    line-height: 46px;
+        font-weight: 600;
+        margin-top: -5px;
+        margin-bottom: 18px;
+        line-height: 46px;
     }
-    p{
+
+    p {
         // color: #fff;
-    font-size: .9375rem;
-    font-weight: 400;
-    line-height: 1.6;
-    color: #bbb;
-    padding: 0 60px 0 0;
+        font-size: .9375rem;
+        font-weight: 400;
+        line-height: 1.6;
+        color: #bbb;
+        padding: 0 60px 0 0;
     }
 }
-.sliddiv{
-    width: 50%;
-  align-items: center;
+
+.sliddiv {
+   flex: 1;
+    align-items: center;
 }
-    .blogs1 {
-        text-align: center;  
-    }
-    .blogs2 {
+
+.blogs1 {
+    text-align: center;
+}
+
+.blogs2 {
     line-height: 30px;
     background-color: white;
-            h3 {
-                font-weight: 600;
-    font-size: 18px;
-    line-height: 1;
-    color: #151515;
-            }
-            h5{
-                font-weight: 400;
-                color: #080b1a;
-            }
-        }
-        .paradiv {
-            p {
-                padding: 0 72px;
-            }
-        }
+    width: 91%;
+    h3 {
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 1;
+        color: #151515;
+    }
+
+    h5 {
+        font-weight: 400;
+        color: #080b1a;
+    }
+}
+
+.paradiv {
+    p {
+        padding: 0 72px;
+    }
+}
 
 
-.casestudy{
+.casestudy {
     display: flex;
     margin-top: 200px;
     margin-bottom: 50px;
 }
 
-.casediv{
-   flex: 1;
+.casediv {
+    flex: 1;
     padding: 50px;
-    h2{
+
+    h2 {
+        font-size: 24px;
+        font-weight: 600;
+        color: #ff6c6c;
+        line-height: 1.2;
+        text-transform: capitalize;
+    }
+
+    h1 {
         font-size: 30px;
         font-weight: 600;
-        color: #0e76bc;
+        color: #ff6c6c;
         line-height: 1.2;
         text-transform: capitalize;
     }
-    h1{
-        font-size: 46px;
+
+    h3 {
+        font-size: 20px;
+        font-weight: 300;
+        color: #333;
+        margin-bottom: 10px;
+    }
+
+    a {
         font-weight: 600;
-        color: #0e76bc;
-        line-height: 1.2;
-        text-transform: capitalize;
-    }
-    h3{
-    font-size: 24px;
-    font-weight: 300;
-    color: #333;
-    margin-bottom: 10px;
-    }
-    a{
-      font-weight: 600;
-       padding: 5px 25px;
-       background-color: #fff;
-       color: #66394c;
-       border: 1px solid #31506c;
-    border-radius: 5px;
-    transition: 0.6s;
-    cursor: pointer;
-       &:hover{
+        padding: 5px 25px;
+        background-color: #fff;
+        color: #ff6c6c;
+        border: 1px solid #ff6c6c;
+        border-radius: 5px;
         transition: 0.6s;
-        box-shadow: (6px 0px 10px 2px);
+        cursor: pointer;
+
+        &:hover {
+            transition: 0.6s;
+            box-shadow: (0px 1px 14px 2px);
+        }
     }
-    }
-    p{
+
+    p {
         margin-top: 15px;
+        color: #333;
     }
 }
-.virtual{
- flex: 1;
-  img{
-    transform: rotate3d(0, 0, 0, 0deg);
-    transition: 600ms;
-    &:hover{
-        transform: rotate3d(10, -40, 6, -25deg);
+
+.virtual {
+    flex: 1;
+
+    img {
+        transform: rotate3d(0, 0, 0, 0deg);
         transition: 600ms;
 
+        &:hover {
+            // transform: rotate3d(10, -40, 6, -25deg);
+            transition: 600ms;
+
+        }
     }
-  }
-  
+
 }
-@media (max-width:1024px){
-     .contediv{
+
+// fade out fade in
+.s1div,
+.s2div,
+.s3div {
+    display: block;
+    position: absolute;
+}
+
+.s1div {
+    animation: fade1 40s infinite;
+}
+
+.s2div {
+    animation: fade2 40s infinite;
+}
+
+.s3div {
+    animation: fade3 40s infinite;
+}
+
+@keyframes fade1 {
+    0% {
+        opacity: 1;
+    }
+
+    33% {
+        opacity: 0;
+    }
+
+    66% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes fade2 {
+    0% {
+        opacity: 0;
+    }
+
+    33% {
+        opacity: 1;
+    }
+
+    66% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
+
+@keyframes fade3 {
+    0% {
+        opacity: 0;
+    }
+
+    33% {
+        opacity: 0;
+    }
+
+    66% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
+
+
+// slider
+
+
+
+
+
+
+
+
+@media (max-width:1024px) {
+    .contediv {
         padding: 0;
         margin: 0;
-     }
+        position: inherit;
+    }
 }
 
 
-@media (max-width:720px){
-    
-    .casestudy{
+@media (max-width:720px) {
+
+    .casestudy {
         display: grid;
         padding: 0;
         margin: 0;
     }
-    .casediv{
+
+    .casediv {
         padding: 5px;
         margin: 0;
     }
-    .virtual{
+
+    .virtual {
         padding: 5px;
         margin: 0;
     }
-    .officediv{
+    .providiv{
+        margin: 6px;
+        padding: 0;
+    }
+
+    .officediv {
         display: grid;
         padding: 0;
         gap: 0;
     }
-    .picdiv{
+
+    .picdiv {
         width: 100%;
         padding: 0;
     }
-    .contediv{
-        width: 100%;
+
+    .contmain {
         padding: 0;
+        margin: 6px;
+    }
+
+    .bestdiv {
+        display: grid;
+        padding: 10px;
+        gap: 6px;
+    }
+    .great{
+        display: grid;
+        margin: 6px;
+        padding: 0;
+    }
+    .sliddiv{
+        display: none;
     }
 }
