--- a/styles/business.module.scss
+++ b/styles/business.module.scss
@@ -7,6 +7,8 @@
     .img1div {
         flex: 1;
         position: relative;
+        
+
     }
 
     .img1div:before {
@@ -171,7 +173,7 @@
 
 // section
 
-.mpcdiv{
+.mpcdiv {
     background-color: #cbcbc636;
 }
 
@@ -192,10 +194,12 @@
 .photodiv {
     flex: 1;
     overflow: hidden;
+
     img {
         width: 100%;
         height: 500px;
         transition: 0.5s all ease-in-out;
+
         &:hover {
             transition: 0.5s all ease-in-out;
             transform: scale(1.2);
@@ -249,6 +253,7 @@
     left: 74px;
     opacity: 1;
     z-index: 1;
+
     h2 {
         line-height: 30px;
         font-size: 28px;
@@ -266,7 +271,7 @@
 
 
 .contactdiv {
-      button {
+    button {
         font-weight: 500;
         padding: 15px 28px;
         color: #fff;
@@ -281,13 +286,16 @@
         }
     }
 }
-.servdiv{
+
+.servdiv {
     display: flex;
-    margin: 0px 50px;
+    margin: 15px 50px;
 }
-.procdiv{
+
+.procdiv {
     flex: 1;
-    h2{
+
+    h2 {
         line-height: 30px;
         font-size: 28px;
         font-weight: 500;
@@ -295,80 +303,88 @@
         width: 100%;
         word-spacing: 1px;
     }
-    p{
-        color:  rgb(0 0 0 / 80%);
+
+    p {
+        color: rgb(0 0 0 / 80%);
     }
-    ul{
+
+    ul {
         padding: 10px;
         list-style-type: disc;
         margin-left: 7px;
-        li{
+
+        li {
             margin: 5px 0px;
             transition: 0.5s;
-            &:hover{
+
+            &:hover {
                 transform: scale(1.02);
             }
         }
     }
 }
-.whyimg{
+
+.whyimg {
     flex: 1;
-    overflow: hidden;
-    img{
-    width: 500px;
-    height: 472px;
-    transition: 0.5s; 
-    margin-left: 60px;
-    &:hover{
-         transform: scale(1.1);
-    }
+    img {
+        width: 500px;
+        height: 472px;
+        transition: 0.5s;
+        margin-left: 60px;
     }
 }
 
-.offer{
+.offer {
     margin: 50px;
-    h3{
+
+    h3 {
         font-size: 26px;
         font-weight: 500;
         text-align: center;
     }
 }
-.quadiv{
+
+.quadiv {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 15px;
     margin: 50px;
 }
-.teamdiv{
-       img{
+
+.teamdiv {
+    img {
         width: 55px;
         margin: 15px;
-       }
-       display: flex;
-        padding: 20px;
-        margin: 20px;
+    }
+
+    display: flex;
+    padding: 20px;
+    margin: 20px;
+    box-sizing: content-box;
+    box-shadow: 4px 4px 10px 2px #8080804a;
+    transition: 0.5s;
+
+    &:hover {
         box-sizing: content-box;
-        box-shadow: 4px 4px 10px 2px #8080804a;
+        box-shadow: 4px 4px 20px 5px #ff6c6c;
         transition: 0.5s;
+    }
 
-        &:hover {
-            box-sizing: content-box;
-            box-shadow: 4px 4px 20px 5px #ff6c6c;
-            transition: 0.5s;
-        }
-        h2{ 
-            font-size: 18px                                                                                                                             ;
-            font-weight: 500;
-            line-height: 1;
-            margin-bottom: 10px;
-        }
+    h2 {
+        font-size: 18px;
+        font-weight: 500;
+        line-height: 1;
+        margin-bottom: 10px;
+    }
 
-        p {
-            line-height: 20px;
-            color: #00000087;
-        }
+    p {
+        line-height: 20px;
+        color: #00000087;
+    }
 
 }
+
+// Responsive on 720px
 
 
 @media(max-width:720px) {
@@ -459,8 +475,9 @@
             grid-template-columns: repeat(2, 1fr);
         }
     }
-    .cont11div{  
-        flex: none; 
+
+    .cont11div {
+        flex: none;
         width: 100%;
         height: auto;
         background: #fff;
@@ -468,19 +485,21 @@
         margin: 0px auto;
         margin: auto;
         display: block;
-      
+
         padding: 0px 20px;
         position: inherit;
-        h2{
+
+        h2 {
             font-size: 18px;
             font-weight: 500;
             margin: 0;
             padding: 0;
             margin-bottom: 5px;
         }
-       }
-       .cont12div{  
-        flex: none; 
+    }
+
+    .cont12div {
+        flex: none;
         width: 100%;
         height: auto;
         background: #fff;
@@ -490,15 +509,17 @@
         display: block;
         padding: 0px 20px;
         position: inherit;
-        h2{
+
+        h2 {
             font-size: 18px;
             font-weight: 500;
             margin: 0;
             padding: 0;
             margin-bottom: 5px;
         }
-       }
-    .photodiv{
+    }
+
+    .photodiv {
         display: inherit;
 
     }
@@ -513,19 +534,22 @@
     .imagediv {
         display: none;
     }
+
     .financialdiv {
         ul {
             padding: 0px;
             display: grid;
             gap: 10px;
             grid-template-columns: repeat(1, 1fr);
-            li{
+
+            li {
                 padding: 20px;
                 margin: 0;
             }
         }
     }
-    .workdiv{
+
+    .workdiv {
         margin: 10px;
         border-left: 5px solid #ff6c6c;
         padding-left: 20px;
@@ -617,29 +641,34 @@
         margin-bottom: 10px;
         flex-direction: column-reverse;
     }
-    .offer{
+
+    .offer {
         display: grid;
         margin: 5px;
         padding: 0;
     }
-    .quadiv{
+
+    .quadiv {
         display: grid;
         grid-template-columns: inherit;
         margin: 5px;
         padding: 0;
     }
-    .servdiv{
+
+    .servdiv {
         display: grid;
         padding: 0;
         margin: 5px;
     }
-    .whyimg{
+
+    .whyimg {
         margin: 0;
         padding: 0;
-        img{
+
+        img {
             margin: 0;
             padding: 0;
-            
+
         }
     }
 }
