--- a/styles/business.module.scss
+++ b/styles/business.module.scss
@@ -746,5 +746,13 @@
             padding: 0;
             margin: 0;
         }
+        .offer{
+            padding: 10px;
+            margin: 0;
+        }
+        .quadiv{
+            padding: 10px;
+            margin: 0;
+        }
     
 }
